Remove 'keymaps' from categories as that refers to global VS Code keymap extensions

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
         "vscode": "^1.59.0"
     },
     "categories": [
-        "Notebooks",
-        "Keymaps"
+        "Notebooks"
     ],
     "contributes": {
 		"keybindings":[
