--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     },
 	"displayName": "Jupyter Keymap",
 	"description": "Jupyter keymaps for notebooks",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "engines": {
-        "vscode": "^1.60.0-insider"
+        "vscode": "^1.79.0-insider"
     },
     "repository": {
         "type": "git",
@@ -113,7 +113,7 @@
             },
             {
                 "key": "shift+enter",
-                "when": "editorTextFocus && inputFocus && notebookEditorFocused || notebookCellListFocused && notebookCellType == 'code'",
+                "when": "editorTextFocus && inputFocus && notebookEditorFocused && !interactiveEditorFocused || notebookCellListFocused && notebookCellType == 'code' && !interactiveEditorFocused",
                 "command": "notebook.cell.executeAndSelectBelow"
             }
         ]
