--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
 	"displayName": "Jupyter Keymap",
 	"description": "Jupyter keymaps for notebooks",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "engines": {
         "vscode": "^1.79.0-insider"
     },
@@ -120,7 +120,7 @@
                 "win": "ctrl+alt+enter",
                 "linux": "ctrl+alt+enter",
                 "when": "interactiveEditorHasProvider && interactiveEditorVisible && !interactiveEditorDocumentChanged || interactiveEditorHasProvider && interactiveEditorVisible && config.interactiveEditor.editMode != 'preview'",
-                "command": "interactiveEditor.applyEdits"
+                "command": "interactive.acceptChanges"
             }
         ]
     }
